--- a/K8sDepKubernetesExporter/integration_cr.yaml
+++ b/K8sDepKubernetesExporter/integration_cr.yaml
@@ -2,7 +2,7 @@
 apiVersion: "integration.wso2.com/v1alpha1"
 kind: "Integration"
 metadata:
-  name: "hello-world"
+  name: "hello-world1"
 spec:
   replicas: 1
-  image: "docker_username/repository:v1.0.0"
+  image: "rohithawso2/wso2ei:v1.2.0"
